--- a/RapidChat.csproj
+++ b/RapidChat.csproj
@@ -1,28 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <Compile Remove="wwwroot\**" />
-    <Content Remove="wwwroot\**" />
-    <EmbeddedResource Remove="wwwroot\**" />
-    <None Remove="wwwroot\**" />
+    <Compile Remove="wwwroot\**"/>
+    <Content Remove="wwwroot\**"/>
+    <EmbeddedResource Remove="wwwroot\**"/>
+    <None Remove="wwwroot\**"/>
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="3.9.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.14"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.14"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.14"/>
   </ItemGroup>
-
   <ItemGroup>
-    <Folder Include="rapid-chat-client\src\app\services\" />
-    <Folder Include="rapid-chat-client\src\app\shared\" />
+    <Folder Include="rapid-chat-client\src\app\services\"/>
+    <Folder Include="rapid-chat-client\src\app\shared\"/>
   </ItemGroup>
-
 </Project>
