--- a/rapid-chat-client/package.json
+++ b/rapid-chat-client/package.json
@@ -23,6 +23,7 @@
     "peer": "^0.5.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "xmlhttprequest": "^1.8.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
