--- a/rapid-chat-client/package.json
+++ b/rapid-chat-client/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.5.0",
     "peer": "^0.5.3",
     "rxjs": "~6.4.0",
+    "ssl-root-cas": "^1.3.1",
     "tslib": "^1.10.0",
     "xmlhttprequest": "^1.8.0",
     "zone.js": "~0.9.1"
