Seperate ConnectionString for prod and dev

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=rapidchat.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
