--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=rapidchat.db"
+    "DefaultConnection": "Server=DESKTOP-FI1SUS8;Database=RapidChatDb;User ID=anhminhtran;Password=dinamoTeam;"
   },
   "Logging": {
     "LogLevel": {
