--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-FI1SUS8;Database=RapidChatDb;User ID=anhminhtran;Password=dinamoTeam;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
