--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=rapidchat.db"
+    "DefaultDevConnection": "DataSource=rapidchat.sqlite3"
   },
   "Logging": {
     "LogLevel": {
